# CPPChess

./: .gitignore  CMakeLists.txt  Makefile  README.md  makefile
include/: Bishop.hpp  Board.hpp  ChessGUI.hpp  Game.hpp  Graphics.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp  SDL2_mixer  Texture.hpp  bishop.hpp  board.hpp  graphics.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp  texture.hpp
lib/: SDL2  SDL2_mixer  SDL2_ttf
lib/imgui/examples/example_sdl2_sdlrenderer2/: main.cpp
src/: Bishop.cpp  Board.cpp  ChessGUI.cpp  Game.cpp  Graphics.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Texture.cpp  board.cpp  graphics.cpp  king.cpp  main.cpp  texture.cpp
